--- a/style.css
+++ b/style.css
@@ -4,3 +4,7 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+body{
+    background: linear-gradient(68.15deg, #2F2325 16.62%, #8E5D52 85.61%);
+}
