--- a/style.css
+++ b/style.css
@@ -34,3 +34,51 @@ body{
     font-weight: 400;
     text-decoration: none;
 }
+
+/* CONTENT */
+.content{
+    margin-bottom: 48px;
+}
+
+.content .main-content{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.main-content .main-content-written{
+    display: flex;
+    flex-direction: column;
+    gap: 32px;
+}
+
+.main-content-written .main-content-written-title{
+    color: #FFF2E7;
+    font-family: 'Righteous', cursive;
+    font-weight: 400;
+    font-size: 64px;
+}
+
+.main-content-written .main-content-written-subtitle{
+    color: #ECD6C4;
+    font-family: 'Sarala', sans-serif;
+    font-weight: 400;
+    font-size: 24px;
+}
+
+.main-content-written .main-content-written-button{
+    color: #2F2325;
+    font-family: 'Sarala', sans-serif;
+    font-weight: 400;
+    font-size: 20px;
+    width: 180px;
+    height: 60px;
+    border: none;
+    border-radius: 20px;
+    box-shadow: 4px 5px 4px #00000040;
+    background-color: #ECD6C4;
+}
+
+.main-content .main-content-image{
+    height: 430px;
+}
