--- a/style.css
+++ b/style.css
@@ -82,3 +82,28 @@ body{
 .main-content .main-content-image{
     height: 430px;
 }
+
+.content .secondary-content{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 24px;
+    margin-top: 48px;
+}
+
+.secondary-content .secondary-content-title{
+    color: #FFF2E7;
+    font-family: 'Righteous', cursive;
+    font-weight: 400;
+    font-size: 24px;
+    margin-bottom: 16px;
+    padding-top: 48px;
+    border-top: .3px solid #FFF2E7;
+}
+
+.secondary-content .secondary-content-paragraph{
+    color: #ECD6C4;
+    font-family: 'Sarala', sans-serif;
+    font-weight: 300;
+    font-size: 18px;
+}
